<resources>
    <string name="app_name">Weather App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lisbon">Lisbon</string>
    <string name="madrid">Madrid</string>
    <string name="paris">Paris</string>
    <string name="berlin">Berlin</string>
    <string name="copenhagen">Copenhagen</string>
    <string name="london">London</string>
    <string name="dublin">Dublin</string>
    <string name="prague">Prague</string>
    <string name="vienna">Vienna</string>
    <string name="current_location">Current Location</string>
    <string name="cities">Cities</string>
    <string name="rome">Rome</string>
    <string name="no_internet">No Internet</string>
    <string name="today">Today</string>
    <string name="wind">Wind</string>
    <string name="kmh">km/h</string>
    <string name="visibility">Visibility</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="percentage">%</string>
    <string name="hpa">hPa</string>
    <string name="km">km</string>
</resources>