<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryVariant"
    tools:context=".fragments.OtherCitiesFragment">
    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lisbon_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_selected_city"
                android:fontFamily="@font/ubuntu_medium"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/lisbon"
                android:textColor="@color/colorPrimaryVariant"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/madrid_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/ubuntu_medium"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/madrid"
                android:textColor="@color/textColor"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/paris_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/ubuntu_medium"
                android:padding="5dp"
                android:text="@string/paris"
                android:textColor="@color/textColor"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/berlin_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/ubuntu_medium"
                android:padding="5dp"
                android:text="@string/berlin"
                android:textColor="@color/textColor"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/copenhagen_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/ubuntu_medium"
                android:padding="5dp"
                android:text="@string/copenhagen"
                android:textColor="@color/textColor"
                android:textSize="16sp"/>
        <TextView
                android:id="@+id/rome_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="5dp"
                android:fontFamily="@font/ubuntu_medium"
                android:padding="5dp"
                android:text="@string/rome"
                android:textColor="@color/textColor"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/london_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/ubuntu_medium"
                android:padding="5dp"
                android:text="@string/london"
                android:textColor="@color/textColor"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/dublin_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/ubuntu_medium"
                android:padding="5dp"
                android:text="@string/dublin"
                android:textColor="@color/textColor"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/prague_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/ubuntu_medium"
                android:padding="5dp"
                android:text="@string/prague"
                android:textColor="@color/textColor"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/vienna_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/ubuntu_medium"
                android:padding="5dp"
                android:text="@string/vienna"
                android:textColor="@color/textColor"
                android:textSize="16sp"/>

        </LinearLayout>
    </HorizontalScrollView>
    <include
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        layout="@layout/content_weather_details"/>
    <ProgressBar
        android:id="@+id/progress_bar_current_c"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateTint="@color/colorPrimary"/>
    <RelativeLayout
        android:id="@+id/no_net_rl_c"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/refresh_tv_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="No Internet"
            android:drawableTop="@drawable/ic_error_icon"
            android:textStyle="bold"
            android:drawableTint="@color/off_white"
            android:textColor="@color/off_white"
            android:textSize="14sp"/>
        <Button
            android:id="@+id/refresh_btn_c"
            android:layout_below="@id/refresh_tv_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="Refresh"
            android:textColor="@color/off_white"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryVariant"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>