<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/today"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/textColor"
                android:fontFamily="@font/ubuntu_medium"
                android:textSize="@dimen/_18ssp"/>
            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/today"
                app:layout_constraintStart_toStartOf="@id/today"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="city"
                android:textColor="@color/textColor"
                android:fontFamily="@font/ubuntu_bold"
                android:textSize="@dimen/_28ssp"/>
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/city"
                app:layout_constraintStart_toStartOf="@id/city"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="1-05-2021"
                android:textColor="@color/textColorGray"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/_18ssp"/>
            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:id="@+id/weatherIcon_iv"
                app:layout_constraintTop_toBottomOf="@id/date"
                android:layout_marginTop="@dimen/_40sdp"
                app:layout_constraintStart_toStartOf="@id/date"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/temp_tv"
                android:text="20°C"
                android:textSize="@dimen/_40ssp"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:fontFamily="@font/ubuntu_light"
                app:layout_constraintTop_toTopOf="@id/weatherIcon_iv"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_20sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/desc_tv"
                android:text="Light rain"
                android:textSize="@dimen/_18ssp"
                android:textAlignment="center"
                android:textColor="@color/textColorGray"
                android:fontFamily="@font/ubuntu_regular"
                app:layout_constraintTop_toBottomOf="@id/temp_tv"
                app:layout_constraintEnd_toEndOf="@id/temp_tv"
                android:layout_marginTop="@dimen/_10sdp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/weatherIcon_iv"
                android:layout_marginTop="@dimen/_40sdp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_weather_details"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:orientation="vertical"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="@dimen/_20sdp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:fontFamily="@font/ubuntu_bold"
                            android:textSize="@dimen/_18ssp"
                            android:textColor="@color/textColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="4.12"
                            android:padding="@dimen/_2sdp"
                            android:fontFamily="@font/ubuntu_light"
                            android:textSize="@dimen/_36ssp"
                            android:textColor="@color/textColorGray"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kmh"
                            android:fontFamily="@font/ubuntu_regular"
                            android:textSize="@dimen/_18ssp"
                            android:textColor="@color/textColor"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_weather_details"
                        android:padding="@dimen/_5sdp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_20sdp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:fontFamily="@font/ubuntu_bold"
                            android:textSize="@dimen/_18ssp"
                            android:textColor="@color/textColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="40"
                            android:padding="@dimen/_2sdp"
                            android:fontFamily="@font/ubuntu_light"
                            android:textSize="@dimen/_36ssp"
                            android:textColor="@color/textColorGray"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/percentage"
                            android:fontFamily="@font/ubuntu_regular"
                            android:textSize="@dimen/_18ssp"
                            android:textColor="@color/textColor"/>
                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_weather_details"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:orientation="vertical"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="@dimen/_5sdp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/visibility"
                            android:fontFamily="@font/ubuntu_bold"
                            android:textSize="@dimen/_18ssp"
                            android:textColor="@color/textColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="409"
                            android:padding="@dimen/_2sdp"
                            android:fontFamily="@font/ubuntu_light"
                            android:textSize="@dimen/_36ssp"
                            android:textColor="@color/textColorGray"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/km"
                            android:fontFamily="@font/ubuntu_regular"
                            android:textSize="@dimen/_18ssp"
                            android:textColor="@color/textColor"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_weather_details"
                        android:padding="@dimen/_5sdp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_5sdp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:fontFamily="@font/ubuntu_bold"
                            android:textSize="@dimen/_18ssp"
                            android:textColor="@color/textColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1034"
                            android:padding="@dimen/_2sdp"
                            android:fontFamily="@font/ubuntu_light"
                            android:textSize="@dimen/_36ssp"
                            android:textColor="@color/textColorGray"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hpa"
                            android:fontFamily="@font/ubuntu_regular"
                            android:textSize="@dimen/_18ssp"
                            android:textColor="@color/textColor"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar_current"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateTint="@color/colorPrimary"/>
    <RelativeLayout
        android:id="@+id/no_net_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryVariant"
        android:visibility="gone">
        <TextView
            android:id="@+id/refresh_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_internet"
            android:drawableTop="@drawable/ic_error_icon"
            android:textStyle="bold"
            android:drawableTint="@color/colorPrimary"
            android:textColor="@color/textColor"
            android:textSize="14sp"/>
        <Button
            android:id="@+id/refresh_btn"
            android:layout_below="@id/refresh_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Refresh"
            android:textColor="@color/off_white"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>