<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TabLayout.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_16sdp"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor="@color/off_white"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/theme_toggle_iv"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_night"
                android:layout_marginEnd="@dimen/_16sdp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <!--            android:layout_marginRight="40dp"-->
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_alignParentLeft="true"
                android:background="@color/colorPrimary"
                app:tabIndicatorColor="@color/off_white"
                app:tabSelectedTextColor="@color/off_white"
                app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:tabTextColor="@color/off_white"
                app:tabRippleColor="@color/colorPrimaryVariant">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_item_currentLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_location" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_item_otherCities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cities" />
            </com.google.android.material.tabs.TabLayout>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>